Fix: Pricing for DT app

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <img src="./assets/DT-logo.png" />
               <br>
               <p class="name">Draft Tutor</p>
-              <p class="price">FREE</p>
+              <p class="price">$0.99</p>
               <a class="store-link" href='https://itunes.apple.com/us/app/draft-tutor/id1341626107?mt=8'><img alt='Get it on the AppStore' src='./assets/appstore-link.png'/></a>
             </div>
           </div>
